@@ -2246,8 +2246,8 @@ void move_player(int Ind, int dir, int do_pickup)
 		 * and summoning monster armies easier.
 		 */
 
-		if ((!strcmp(p_ptr->name,cfg_dungeon_master) || player_is_king(Ind)) && master_move_hook)
-			master_move_hook(Ind, NULL);
+		if ((!strcmp(p_ptr->name,cfg_dungeon_master) || player_is_king(Ind)) && p_ptr->master_move_hook)
+			p_ptr->master_move_hook(Ind, NULL);
 	}
 }
 
