@@ -790,6 +790,6 @@ bool (*get_obj_num_hook)(int k_idx);
  * easier)
  */
 //bool (*master_move_hook)(int Ind, char * args) = master_acquire;
-bool (*master_move_hook)(int Ind, char * args) = NULL;
+//bool (*master_move_hook)(int Ind, char * args) = NULL; /*evileye - multi DMs! */
 
 
